--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -1,107 +1,104 @@
 /* styles/globals.css */
 
 .calendar {
-    color: #333;
-    font-family: 'Kanit', sans-serif;
-    color: #919090;  
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-      
-  .header, .yearHeader {
-    color: #7E8EF1;  
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   
-    font-size: 1.5em;
-  }
-      
-  .icon {
-    cursor: pointer;
-    font-size: 1.5em;
-    padding: 0 10px;
-    user-select: none;
-  }
-      
-  .daysRow, .row {
-    display: flex;
-  }
-      
-  .day, .cell {
-    flex: 1;
-    text-align: center;
-    padding: 10px;
-    margin: 2px;
-    border-radius: 5px;
-  }
-      
-  .day {
-    color: #7E8EF1;
-    background-color: #e8e5e5;
-    font-size: normal;
-    text-transform: uppercase;
-    padding: 10px 0;
-  }
-      
-  .cell {
-    cursor: pointer;
-    position: relative;
-    background-color: #e0e0e0;
-    border-radius: 6px;
-    border: 1px solid #ddd;
-    color: #333;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-      
-  .cell.disabled {
-    background-color: #e9e9e9;
-    color: #aaa;
-    cursor: default;
-  }
-      
-  .cell.selected {
-    background-color: #b1bcff;
-  }
-      
-  .number {
-    color: #7E8EF1;  
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 1.2em;
-  }
-      
-  .event {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    background-color: #7E8EF1;
-    border-radius: 50%;
-    padding: 2px 5px;
-    font-size: 0.8em;
-  }
-      
-  .meeting {
-    background-color: #7E8EF1;
-  }
-      
-  .video-chat {
-    background-color: #8bc34a;
-  }
-      
-  .reminder {
-    background-color: #03a9f4;
-  }
-  
-  .todayDate {
-    color:#7E8EF1;
-    margin-top: 20px;
-    font-size: 1.2em;
-    text-align: center;
-  }
-  
+  color: #333;
+  font-family: 'Kanit', sans-serif;
+  color: #919090;  
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+    
+.header, .yearHeader {
+  color: #7E8EF1;  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5em;
+}
+    
+.icon {
+  cursor: pointer;
+  font-size: 1.5em;
+  padding: 0 10px;
+  user-select: none;
+}
+    
+.daysRow, .row {
+  display: flex;
+}
+    
+.day, .cell {
+  flex: 1;
+  text-align: center;
+  padding: 10px;
+  margin: 2px;
+  border-radius: 5px;
+}
+    
+.day {
+  color: #7E8EF1;
+  background-color: #e8e5e5;
+  font-size: normal;
+  text-transform: uppercase;
+}
+    
+.cell {
+  cursor: pointer;
+  position: relative;
+  background-color: #e0e0e0;
+  border-radius: 6px;
+  border: 1px solid #ddd;
+  color: #333;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+    
+.cell.disabled {
+  background-color: #e9e9e9;
+  color: #aaa;
+  cursor: default;
+}
+    
+.cell.selected {
+  background-color: #b1bcff;
+}
+    
+.number {
+  color: #7E8EF1;  
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 1.2em;
+}
+    
+.event {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: #7E8EF1;
+  border-radius: 50%;
+  padding: 2px 5px;
+  font-size: 0.8em;
+}
+    
+.meeting {
+  background-color: rgb(126, 142, 241);
+}
+    
+.video-chat {
+  background-color: #8bc34a;
+}
+    
+.reminder {
+  background-color: #03a9f4;
+}
+
+.todayDate {
+  color:#7E8EF1;
+  margin-top: 20px;
+  font-size: 1.2em;
+  text-align: center;
+}
