--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,17 @@ html, body {
   height: 100%;
 }
 
+/* hero */
+
+.cover {
+  background-color: #b1bcff;
+  height: 18rem;
+  border-radius: 30px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 h1 {
   color: #7E8EF1;
   margin: 0;
