--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -10,5 +10,5 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    border: 2px solid white; /* Adjust the border size and color as needed */
+    border: 2px solid white; 
   }
