updated payroll components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,17 @@ h5 {
   background: linear-gradient(234deg, rgba(249,248,252,1) 0%, rgba(205,205,225,1) 50%, rgba(253,253,255,1) 100%);
   border-radius: 10px;
 }
- 
+
+/* images */
+
+.image {
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+  margin: auto;
+  box-shadow: 0.1rem 0.1rem 0.8rem #afafaf;
+}
+
 /* icons */
 .social-icons {
   color: #7E8EF1;
