--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -1,14 +1,33 @@
-
 .avatar {
     position: relative;
+    border-radius: 30px;
   }
+  /* avatar */
+.small-avatar {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #7E8EF1;
+  vertical-align: middle;
+  border-radius: 30px;
+}
+
+.avatar-status {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 2px solid white; 
+}
+
+.media {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #7E8EF1;
+  border-radius: 50%;
+  vertical-align: middle;
+  min-height: 120px;
+  max-width: 120px;
   
-  .avatar-status {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    border: 2px solid white; 
-  }
+}  
