added product, inventory dashboard pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,6 +121,19 @@ h6 {
   position: absolute;
 }
 
+
+.tech-card {
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.tech-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
 /* footer */
 
 .footer {
