--- a/styles/form.css
+++ b/styles/form.css
@@ -1,66 +1,82 @@
 /* form */
 
 .form {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-    border-radius: 30px;
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  border-radius: 30px;
   }
       
-  .form-control {
-    color: #7E8EF1;
-  }
-     
-      
-  .form-control:focus {
-    outline: none; /* Remove default outline */
-    box-shadow: none; /* Remove default shadow */
-  }
-  .form-select {
-   border-radius: 10px;
-   
-  }
-      
-  .form-select:focus {
-    outline: none; /* Remove default outline */
-    box-shadow: none; /* Remove default shadow */
-  }
-  .form-signin .checkbox {
-    font-weight: 30px;
-  }
-  .form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 50px;
-    border-radius: 30px;
-  }
-      
-  .form-signin .form-control:focus {
-    z-index: 2;
-    font-size: 30px;
-    border-radius: 30px;
-  }
-      
-  .form-signin input[type='email'] {
-    border-style: solid;
-    border-radius: 30px;
-    margin-bottom: -1px;
-    color: white
-  }
-  .form-signin input[type='password'] {
-   
-    border-radius: 30px;
-    margin-bottom: 10px;
-  }
+.form-control {
+  color: #7E8EF1;
+}
+        
+.form-control:focus {
+  outline: none;
+  box-shadow: none; 
+}
+.form-select {
+  border-radius: 10px;
   
-  .toast-body {
-    width: 100%;
-    background-color: black;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-    border-radius: 30px;
+}
+    
+.form-select:focus {
+  outline: none; 
+  box-shadow: none;
+}
+.form-signin .checkbox {
+  font-weight: 30px;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 50px;
+  border-radius: 30px;
+}
+    
+.form-signin .form-control:focus {
+  z-index: 2;
+  font-size: 30px;
+  border-radius: 30px;
+}
+  
+.form-signin input[type='email'] {
+  border-style: solid;
+  border-radius: 30px;
+  margin-bottom: -1px;
+  color: white
+}
+.form-signin input[type='password'] {
+  
+  border-radius: 30px;
+  margin-bottom: 10px;
+}
+
+.toast-body {
+  width: 100%;
+  background-color: black;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  border-radius: 30px;
 }    
+
+.input-group .quantity-input {
+  width: 40px; 
+  text-align: center; 
+  border: none; 
+  box-shadow: none; 
+}
+
+.input-group .quantity-input:focus {
+  outline: none; 
+}
+
+.input-group .button-minus,
+.input-group .button-plus {
+  border: none; 
+  box-shadow: none;
+}
